--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,1 @@
-.App {
-  text-align: center;
-}
-
-.App-header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: #282c34;
-}
-
-.App-main {
-  margin-top: 1em;
-  display: flex;
-  justify-content: center;
-}
-
-.App-link {
-  font-size: 1rem;
-  color: #6C47FF;
-}
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
