--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  width: 400px;
-  height: 600px;
+  /* width: 400px;
+  height: 600px; */
 }
